# prototype_bazel_architect

./: BUILD.bazel  WORKSPACE  angular.json  package.json
patches/: @angular+compiler-cli+9.0.0-next.10.patch  @angular-devkit+architect-cli+0.803.9.patch  @angular-devkit+build-angular+0.900.0-rc.0.patch  @ngtools+webpack+9.0.0-rc.0.patch  build_bazel_rules_nodejs.patch  build_bazel_rules_nodejs.pr1273.patch  enhanced-resolve+4.1.1.patch
