load("@npm//@angular-devkit/architect-cli:index.bzl", "architect")

architect(
    name = "build",
    args = ["frontend:build", "--outputPath=$@"],
    data = glob(["src/*", "src/**"]) + [
        "angular.json",
        "tsconfig.app.json",
        "tsconfig.json",
        "@npm//@angular/cli",
        "@npm//@angular/core",
        "@npm//@angular/router",
        "@npm//@angular/platform-browser-dynamic",
        "@npm//@angular-devkit/architect-cli",
        "@npm//@angular-devkit/build-angular",
    ],
    output_dir = True,
)
